2008-01-19  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-08-01
	* remove doublicated publication of 'nbRawCells' parameter to info
	spaces

2007-12-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-08-00
	* based on EventFilter/ShmBuffer V00-05-00
	* add 'watching' workloop: detect dead EP processes and kill EP
	processes if an event is being processed longer than 30s
	* use ShmBuffer process id to account for the number of client EPs
	* add custom webpage which displays client process status and shm
	cell status

2007-11-30  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-07-08
	* bugfix: modify FUResource to produce warning when fedid is 
	not in range, generate error message indicating duplicated fedids

2007-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-07
	* bugfix: lost events (events the total size of which exceed the
	size of a single raw shm cell) are correctly handled now.

2007-09-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-06
	* add parameter 'reasonForFailed'
	* FUResourceTable: throw an exception if the creation of the
	shared memory segment fails
	* therefore, FUResourceBroker now correctly goes to 'FAILED' state
	in this scenario

2007-08-28  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-07-05
	* adjust to new XMAS-ready version of Utilties/WebGUI

2007-08-21  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V00-07-04
	* FUResource.cc uses board_sense to avoid crash when running with
	fake data (inconsistent GTFE block) 

	
2007-08-21  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V00-07-03
	* Modified FUResource to set event number using 32-bit trigger
	no. from GTP Daq record 
	
2007-06-06  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-07-02
	* First pass modifications for xdaq 3.9 (mainly include paths of
	xdaq headers) 
	
2007-05-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-01